--- a/droplet_dodge_v1-1-2.html
+++ b/droplet_dodge_v1-1-2.html
@@ -133,7 +133,7 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript' src='droplet_dodge_v1.1.1.js'></script>
+	<script type='text/javascript' src='droplet_dodge_v1-1-2.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
 		var engine = new Engine;
@@ -142,8 +142,8 @@
 
 		(function() {
 
-			const EXECUTABLE_NAME = 'droplet_dodge_v1.1.1';
-			const MAIN_PACK = 'droplet_dodge_v1.1.1.pck';
+			const EXECUTABLE_NAME = 'droplet_dodge_v1-1-2';
+			const MAIN_PACK = 'droplet_dodge_v1-1-2.pck';
 			const INDETERMINATE_STATUS_STEP_MS = 100;
 
 			var canvas = document.getElementById('canvas');
